src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Agreement_Addendum_Collected__c</fullName>
        <label>Agreement/Addendum Collected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Addendum_Executed_Sent_Back__c</fullName>
        <label>Agreement/Addendum Executed &amp; Sent Back</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Addendum_Sent__c</fullName>
        <label>Agreement/Addendum Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Sent__c</fullName>
        <label>Agreement Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charter_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_90_days_to_close__c</fullName>
        <description>##Conga created btn:00b0P000000eMaI
##Conga updated btn:00b0P000000eMaI</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a1NU0000004pNEx&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P000009ltbI&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=AvP Invoice - &quot; + Name + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;emailtoid=003U000000x5mIa&quot; + 
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Collection 90 days to close</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <inlineHelpText>This is always the entire length of the current signed contract/addendum</inlineHelpText>
        <label>Contract Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 Months</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>15 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>30 Months</fullName>
                </value>
                <value>
                    <fullName>36 Months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOCUSIGN1_Year_Ext_Concurrent_to_Program__c</fullName>
        <description>##Conga created btn:00b0P000000iOjj
##Conga updated btn:00b0P000000iOjj</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a1N0P000008JWFe&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Aviation Portfolio - &quot; + Name + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;docusignvisible=1&quot; + 
&quot;&amp;docusignr1id=&quot; +  Send_Invoice_To__r.Id  +
&quot;&amp;docusignr1type=Signer&quot; + 
&quot;&amp;docusignr1role=Signer 1&quot; + 
&quot;&amp;docusignr1routingorder=1&quot; + 
&quot;&amp;docusignr2id=003U0000008fmOx&quot; + 
&quot;&amp;docusignr2type=Signer&quot; + 
&quot;&amp;docusignr2role=Signer 2&quot; + 
&quot;&amp;docusignr2routingorder=2&quot; + 
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;docusignr3id=&quot; +  Send_Invoice_to_2__r.Id  +
&quot;&amp;docusignr3routingorder=1&quot; + 
&quot;&amp;docusignr3type=Carbon Copy&quot; + 
&quot;&amp;docusignr3role=Signer 3&quot; + 
&quot;&amp;docusignr4id=&quot; +  Send_Invoice_to_3__r.Id  +
&quot;&amp;docusignr4type=Carbon Copy&quot; + 
&quot;&amp;docusignr4role=Signer 4&quot; + 
&quot;&amp;docusignr4routingorder=1&quot; + 
&quot;&amp;qmode=DocuSign&quot;</formula>
        <label>DOCUSIGN1 Year Ext Concurrent to Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCUSIGN_2_yr_ext_conc_to_program__c</fullName>
        <description>##Conga created btn:00b0P000000iOk3</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a1N0P000008JWOv&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Aviation Portfolio - &quot; + Name + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;docusignvisible=1&quot; + 
&quot;&amp;docusignr1id=&quot; +  Send_Invoice_To__r.Id  +
&quot;&amp;docusignr1type=Signer&quot; + 
&quot;&amp;docusignr1role=Signer 1&quot; + 
&quot;&amp;docusignr1routingorder=1&quot; + 
&quot;&amp;docusignr2id=003U0000008fmOx&quot; + 
&quot;&amp;docusignr2type=Signer&quot; + 
&quot;&amp;docusignr2role=Signer 2&quot; + 
&quot;&amp;docusignr2routingorder=2&quot; + 
&quot;&amp;docusignr3id=&quot; +  Send_Invoice_to_2__r.Id  +
&quot;&amp;docusignr3type=Carbon Copy&quot; + 
&quot;&amp;docusignr3role=Signer 3&quot; + 
&quot;&amp;docusignr3routingorder=1&quot; + 
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;qmode=DocuSign&quot;</formula>
        <label>DOCUSIGN 2 yr ext conc to program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Time_Frame__c</fullName>
        <label>Decision Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>30-60 Days</fullName>
                </value>
                <value>
                    <fullName>60-90 Days</fullName>
                </value>
                <value>
                    <fullName>90-120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSign_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DocuSign Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_Auto_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Auto-Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entire_Agreement_End_Date__c</fullName>
        <label>Entire Agreement End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Name_Paid_From__c</fullName>
        <inlineHelpText>Trust Name or another name where the funds were transferred from.</inlineHelpText>
        <label>Entity Name- Paid From</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>AVP Entity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Flight_Volume__c</fullName>
        <label>Estimated Flight Volume</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-24</fullName>
                </value>
                <value>
                    <fullName>25-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100-200</fullName>
                </value>
                <value>
                    <fullName>200+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close_Steps_Not_Created__c</fullName>
        <inlineHelpText>This field is automatically updated by the Auto Close page with how many steps are being skipped by the auto close action.</inlineHelpText>
        <label>Auto Close - Steps Not Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Process Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contact_BPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities - ProcessComposer</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Group</label>
        <referenceTo>FSTR__Process_Group__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Opportunity was created from a Recurring Business Process record this field links back to that record.</inlineHelpText>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Skipped_Steps__c</fullName>
        <label>Skipped Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__pce_definition_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Definition that this object is executing on currently.</description>
        <inlineHelpText>Link to the Definition that this object is executing on currently.</inlineHelpText>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financially_Qualified__c</fullName>
        <label>Financially Qualified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Introduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Send_Date__c</fullName>
        <formula>DATE(year(  CloseDate  ), 
(month(CloseDate)-1),DAY(CloseDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_to_2_email__c</fullName>
        <formula>Send_Invoice_to_2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to 2 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_3_email__c</fullName>
        <formula>Send_Invoice_to_3__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to 3 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Goes_By__c</fullName>
        <formula>Send_Invoice_To__r.Goes_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Goes By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Onboarding_Opportunity__c</fullName>
        <label>Is Onboarding Opportunity?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Email__c</fullName>
        <label>Last Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Phone_Message__c</fullName>
        <label>Last Phone Message</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Text__c</fullName>
        <label>Last Text</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Deal_Description__c</fullName>
        <label>Lost Deal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Deal_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Deal Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Deal_Hand_Note_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Deal Hand Note Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Agreement_Start_Date__c</fullName>
        <formula>Entire_Agreement_End_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_1__c</fullName>
        <label>Next Step #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step_2__c</fullName>
        <label>Next Step #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step_s__c</fullName>
        <label>Next Step(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collect Contract</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
                <value>
                    <fullName>Collect Contract &amp; Payment</fullName>
                </value>
                <value>
                    <fullName>Internal Research</fullName>
                </value>
                <value>
                    <fullName>Provide Quotes</fullName>
                </value>
                <value>
                    <fullName>Provide Research Analysis</fullName>
                </value>
                <value>
                    <fullName>Renewal Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Yr_Extension__c</fullName>
        <description>##Conga created btn:00b0P000001EVsy
##Conga updated btn:00b0P000001EVsy</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a1N0P000004ePSp&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P00000BPuXY&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=AvP Invoice and Extension - &quot; + Name + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;emailtoid=&quot; +   Send_Invoice_To__r.Id   +
&quot;&amp;emailadditionalto=craig@aviationportfolio.com;&quot; + Invoice_to_2_email__c + &quot;;&quot; + Invoice_to_3_email__c + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>One Yr Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Program_Name__c</fullName>
        <label>Operator Program Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Is_Onboarding_Opportunity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25-Hour QS Executive Card</fullName>
                </value>
                <value>
                    <fullName>Advanced Air</fullName>
                </value>
                <value>
                    <fullName>Air Partner Card Program</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy ETP</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets $100k Card</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets $1mm Card</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets $250k Card</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets $500k Card</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets $50k Amex Centurion</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets Sky Access</fullName>
                </value>
                <value>
                    <fullName>EJM Elite Point-to-Point Program</fullName>
                </value>
                <value>
                    <fullName>EJM Flat Rate Program</fullName>
                </value>
                <value>
                    <fullName>Flexjet 25-Hour Card</fullName>
                </value>
                <value>
                    <fullName>Flexjet Fractional Lease</fullName>
                </value>
                <value>
                    <fullName>Flexjet Fractional Share</fullName>
                </value>
                <value>
                    <fullName>FX Air Aviator</fullName>
                </value>
                <value>
                    <fullName>Jet Edge Reserve Program</fullName>
                </value>
                <value>
                    <fullName>Jet Linx Executive Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Cross Country Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Elite Card</fullName>
                </value>
                <value>
                    <fullName>Marquis Standard Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Europe Entry Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Europe Fractional Share</fullName>
                </value>
                <value>
                    <fullName>NetJets Europe Standard Card</fullName>
                </value>
                <value>
                    <fullName>NetJets Fractional Lease</fullName>
                </value>
                <value>
                    <fullName>NetJets Fractional Share</fullName>
                </value>
                <value>
                    <fullName>NetJets Mission Capable Card</fullName>
                </value>
                <value>
                    <fullName>Planesense Fractional Share</fullName>
                </value>
                <value>
                    <fullName>Sentient Jet Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Program_not_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operator Program not required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Next_Step__c</fullName>
        <label>Opportunity Next Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originally_Signed_Contract_is_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Originally Signed Contract is Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PortfolioProtectCorporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PortfolioProtectCorporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PortfolioPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Protect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PortfolioProtect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Adj_Rev__c</fullName>
        <formula>Probability * Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Adj Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portfolio Intelligence</fullName>
                </value>
                <value>
                    <fullName>Portfolio Protect</fullName>
                </value>
                <value>
                    <fullName>Whole Aircraft</fullName>
                </value>
                <value>
                    <fullName>Vendor Due Diligence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Entity_Name__c</fullName>
        <label>Program Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent__c</fullName>
        <label>Proposal Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unnecessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Strength__c</fullName>
        <label>Prospect Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Strong</fullName>
                </value>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_1_For_Closed_Deal__c</fullName>
        <label>Reason For Closed Deal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_1_For_Lost_Deal__c</fullName>
        <label>Reason for Lost Deal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn&apos;t fly enough</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t understand our value / unhappy with our value</fullName>
                </value>
                <value>
                    <fullName>Happy with how they are flying, don&apos;t need more help</fullName>
                </value>
                <value>
                    <fullName>Other (write out)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Authorization_Form_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Send Authorization Form to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Send Authorization Form to)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Authorization_to_full_name__c</fullName>
        <formula>Send_Authorization_Form_to__r.FirstName &amp;&quot; &quot;&amp; Send_Authorization_Form_to__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Authorization to full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Invoice_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Send Invoice To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Send Invoice To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Invoice_to_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Invoice to 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Send Invoice to 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Invoice_to_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Invoice to 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Send Invoice to 3)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Term_End_Date__c</fullName>
        <inlineHelpText>If term end date is less than 1 year, enter end date here</inlineHelpText>
        <label>Special Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Square_Link__c</fullName>
        <label>Square Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Standard_Collection__c</fullName>
        <description>##Conga created btn:00b0P000000eMaI</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a1NU0000004pNEx&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P000009ltbI&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=AvP Invoice - &quot; + Name + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;emailadditionalto=michelle@aviationportfolio.com; jennifer@aviationportfolio.com&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Standard Collection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDealHandoffNotes__c</fullName>
        <description>Key information about a deal that can be referenced during a customer&apos;s onboarding project.</description>
        <inlineHelpText>Use this field to store key information about a deal that can be referenced during a customer&apos;s onboarding project.</inlineHelpText>
        <label>Deal Handoff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s) for their onboarding process.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingKickoffCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if the TaskRay Onboarding Kickoff Flow has been completed for a given Opportunity.</description>
        <inlineHelpText>This field will be automatically updated if the TaskRay Onboarding Kickoff Flow has been completed for a given Opportunity.</inlineHelpText>
        <label>Onboarding Kickoff Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <formula>DATE((year(Term_Start_Date__c)+1),
month(Term_Start_Date__c),(DAY(Term_Start_Date__c)))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1-year after start date</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount_with_CC__c</fullName>
        <formula>Amount *1.035</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount with CC %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>